# hackaton2023

./: README.md  pyproject.toml  readme
assets/: output.txt
infra/: cdk.json  package-lock.json  package.json
infra/lib/: CommonDefinitions.ts  TwitterCron.ts  TwitterDynamo.ts  TwitterLambdas.ts  TwitterS3.ts  TwitterSM.ts  hackaton-stack.ts
infra/test/: hackaton.test.ts  hakaton.test.ts
src/twitter_reader/: main.py  requirements.txt
